[package]
name = "auto_speech2speech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
input = "0.8"
libc = "0.2"
evdev = "0.12.1"
nix = { version = "0.27.1", features = ["poll"] }
subprocess = "0.2.9"
reqwest = { version = "0.11.22", features = ["json", "stream", "multipart"] }
tokio = { version = "1.34.0", features = ["rt"]}
futures-util = "0.3.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.18.0"
