[package]
name = "auto_speech2speech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = { version = "0.7.2", features = ["v0_3_77"] }
pipewire-sys = "0.7.2"
libspa-sys = "0.7.2"
clap = "4.4.8"
input = "0.8"
libc = "0.2"
evdev = "0.12.1"
nix = { version = "0.27.1", features = ["poll"] }
reqwest = { version = "0.11.22", features = ["json", "stream", "multipart"] }
tokio = { version = "1.34.0", features = ["rt"]}
futures-util = "0.3.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.18.0"
ctrlc = "3.4.1"
lame-sys = "0.1.2"
minimp3-sys = "0.3.2"
anyhow = "1.0.75"
